--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="col-md-5 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 pt-5 px-4 px-lg-5">
-          <h3 class="mb-xl-4">Notre expertise au service de votre entreprise</h3>
+          <h3 class="mb-xl-4">Vers une nouvelle ère</h3>
           <p class="mb-4 mb-xl-5">Depuis 1898, chaque génération a contribué au succès du journal. L’alliance de
             l’héritage et de la modernité a toujours été dans son ADN avec des engagements inchangés au fil des
             générations : être le partenaire fiable qui accompagne les entreprises dans la finalisation de leurs
@@ -71,8 +71,8 @@
 <section class="container overflow-hidden pb-5">
   <div class="card-info">
     <div class="row g-4">
-      <div class="card bg-yellow-color rounded-3 col-md-6 order-md-2">
-        <img class="object-fit-contain w-100 h-100 " src="assets/img/societe/a-propos/myjss.png" alt="Image">
+      <div class="card rounded-3 col-md-6 order-md-2 p-0">
+        <img class="object-fit-contain   " src="assets/img/societe/a-propos/myjss.png" alt="Image">
       </div>
       <div class="col-md-6 order-md-1">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 pt-5 px-4 px-lg-5">
