--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -239,7 +239,7 @@
     <div class="row">
       <div class="col-12 col-lg-4 mb-4">
         <div class="card h-100">
-          <img src="assets/img/societe/join-us/join-the-jss.png" class="card-img-top" alt="Card image">
+          <img src="assets/img/societe/join-us/events.jpg" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Événements toute l’année</h4>
             <p class="card-text">La Com’ remue ciel et terre pour animer le quotidien des salariés : déjeuner,
