--- a/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story-swiper/our-story-swiper.component.html
@@ -102,7 +102,7 @@
                 </div>
               </div>
               <div class="card rounded-3 col-8 order-md-2 p-0 overflow-hidden">
-                <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2002.jpg" alt="Image">
+                <img class="object-fit-contain w-100" src="assets/img/societe/our-story/2002.png" alt="Image">
               </div>
             </div>
           </swiper-slide>
