--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -212,13 +212,13 @@
       <div class="col-lg-5 d-flex pt-3 pt-xl-0">
         <div class="card h-100 border-0 rounded-5 w-100">
           <div class="card-body pb-3 px-3">
-            <img src="assets/img/icons/Fourniture_documents.svg" alt="Icon">
-            <h3 class="h4 text-white" routerLink="/services/document" style="cursor: pointer;">Fourniture de documents
+            <img src="assets/img/icons/Domiciliation.svg" alt="Icon">
+            <h3 class="h4 text-white" routerLink="/services/domiciliation" style="cursor: pointer;">Domiciliation
             </h3>
-            <p class="mb-0">Vos documents officiels fournis rapidement et en toute conformité.</p>
+            <p class="mb-0">Une domiciliation au cœur de Paris avec gestion simplifiée.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
-            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/document"
+            <a class="btn btn-icon btn-lg btn-outline-primary rounded-circle" routerLink="/services/domiciliation"
               aria-label="Learn more">
               <i class="ai-arrow-right"></i>
             </a>
