--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -5,7 +5,7 @@
         <a class="btn btn-secondary btn-fixed-secondary px-3 align-items-center d-flex" (click)="openMyJss()"
           [href]="frontendMyJssUrl+MY_JSS_HOME_ROUTE"><img src="assets/images/homepage/my-jss-logo-link.svg" /><i
             class="bi-arrow-up-right ms-1"></i></a>
-        <a class="navbar-brand ms-5 ps-3 " href="index.html">
+        <a class="navbar-brand ms-5 ps-3 " [routerLink]="['/']">
           <img class="lazyload" src="assets/images/homepage/logo.svg" style="max-height: 90px;" alt="image">
         </a>
         <div>
@@ -71,7 +71,7 @@
         </a>
 
         <!-- Mobile logo -->
-        <a class="navbar-brand mx-auto" href="/">
+        <a class="navbar-brand mx-auto" [routerLink]="['/']">
           <img src="assets/images/homepage/logo-white.svg" alt="logo" style="height: 40px;" />
         </a>
 
