--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -21,7 +21,7 @@
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
     <div class="jarallax-img"
-      style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalite.png');">
+      style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalite.jpg');">
     </div>
   </div>
 </section>
@@ -208,7 +208,7 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5" src="assets/img/myjss-services/formalites/externaliser_formalites.png"
+          <img class="d-block rounded-5" src="assets/img/myjss-services/formalites/externaliser_formalites.jpg"
             alt="Image">
         </div>
       </div>
