--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -69,7 +69,7 @@
             </p>
             <hr>
             <p>
-              <a class="nav-link myjss-nav-link" style="cursor: pointer;" [href]="frontendJssUrl" routerLink="/">Journal
+              <a class="nav-link myjss-nav-link" style="cursor: pointer;" [href]="frontendJssUrl">Journal
                 Spécial des Sociétés</a>
             </p>
           </div>
