--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -14,8 +14,8 @@
 
       <!-- Logo -->
       <div class="col-4 d-flex justify-content-center">
-        <a href="">
-          <img ui-sref='' [src]="isForQuotationNavbar? logoJssDark: logoJss" />
+        <a [routerLink]="['/']">
+          <img [src]="isForQuotationNavbar? logoJssDark: logoJss" />
         </a>
       </div>
 
