--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -16,7 +16,7 @@
 
 <section class="pb-3">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img" style="background-image: url(assets/img/societe/a-propos/banniere_a_propos.png);">
+    <div class="jarallax-img" style="background-image: url(assets/img/societe/a-propos/banniere_a_propos.jpg);">
     </div>
   </div>
 </section>
@@ -54,8 +54,9 @@
           <p class="mb-4 mb-xl-5">Depuis 1898, chaque génération a contribué au succès du journal. L’alliance de
             l’héritage et de la modernité a toujours été dans son ADN avec des engagements inchangés au fil des
             générations : être le partenaire fiable qui accompagne les entreprises dans la finalisation de leurs
-            opérations juridiques<br>
-            Aujourd’hui, Myriam de Montis est Présidente et transmet la société à son fils, Arsène de Montis, Directeur
+            opérations juridiques.<br>
+            Aujourd’hui, Myriam de Montis est Présidente et prépare la transmission de la société à son fils, Arsène de
+            Montis, Directeur
             Général Délégué, qui apporte sa vision pour développer le JSS<br><br>Arsène a intégré une politique RSE au
             sein de la société et oriente la stratégie de l’entreprise vers l’innovation en intégrant de la technologie
             dans chaque service. La finalité est d’offrir la meilleure expérience aux clients et anticiper leurs besoins
