--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -14,7 +14,7 @@
 
 <section class="pb-3 pb-5">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img" style="background-image: url(assets/img/societe/join-us/join_us_banner.png);">
+    <div class="jarallax-img" style="background-image: url(assets/img/societe/join-us/join_us_banner.jpg);">
     </div>
   </div>
 </section>
@@ -26,7 +26,7 @@
   <div class="card-info">
     <div class="row g-4">
       <div class="col-md-7 order-md-1">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/societe/join-us/join_jss.png" alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/societe/join-us/join_jss.jpg" alt="Image">
       </div>
       <div class="col-md-5 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 pt-5 px-4 px-lg-5">
@@ -296,9 +296,7 @@
           <img src="assets/img/societe/join-us/home-working.jpg" class="card-img-top" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">Charte de télétravail</h4>
-            <p class="card-text">Profitez d’un rythme de travail souple avec 1 jour de télétravail par semaine et 1
-              jour
-              flottant par mois à poser quand vous le souhaitez.</p>
+            <p class="card-text">Profitez d’un rythme de travail souple avec 2 jours de télétravail par semaine.</p>
           </div>
         </div>
       </div>
