--- a/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
+++ b/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
@@ -18,7 +18,7 @@
 
 <section class="pb-5 my-5">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img" style="background-image: url(assets/img/societe/team/our_team_banner.png);">
+    <div class="jarallax-img" style="background-image: url(assets/img/societe/team/our_team_banner.jpg);">
     </div>
   </div>
 </section>
