--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -130,7 +130,7 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5 w-100" src="assets/img/myjss-services/documents/gagnez_du_temps.png"
+          <img class="d-block rounded-5 w-100" src="assets/img/myjss-services/documents/gagnez_du_temps.jpg"
             alt="Image">
         </div>
       </div>
