--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -326,8 +326,7 @@
               </div>
               <p>Infos locales, analyses et enquêtes : restez informé(e) sans limite.</p>
               <div class="row align-items-center" routerLink="/subscription">
-                <div class="btn btn-yellow">S'abonner
-                </div>
+                <a class="btn btn-yellow mt-3" style="cursor: pointer;" href="subscription">S'abonner</a>
               </div>
             </div>
           </div>
