--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -57,7 +57,7 @@
             opérations juridiques.<br>
             Aujourd’hui, Myriam de Montis est Présidente et prépare la transmission de la société à son fils, Arsène de
             Montis, Directeur
-            Général Délégué, qui apporte sa vision pour développer le JSS<br><br>Arsène a intégré une politique RSE au
+            Général Délégué, qui apporte sa vision pour développer le JSS.<br><br>Arsène a intégré une politique RSE au
             sein de la société et oriente la stratégie de l’entreprise vers l’innovation en intégrant de la technologie
             dans chaque service. La finalité est d’offrir la meilleure expérience aux clients et anticiper leurs besoins
             de demain. A leurs côtés pour diriger le JSS, Cyrille de Montis comme Directeur de la publication et Alex
