--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -26,9 +26,8 @@
   </div>
 </section>
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
-  videoPath="assets/videos/test_video.mp4" title="Publiez votre annonce en 3 étapes"
-  firstStepTitle="Sélectionnez votre modèle"
+<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/al.mp4"
+  title="Publiez votre annonce en 3 étapes" firstStepTitle="Sélectionnez votre modèle"
   firstStepDescription="Accédez à une bibliothèque complète de formulaires adaptés à vos besoins en annonces légales."
   secondStepTitle=" Remplissez, visualisez et validez votre annonce"
   secondStepDescription="Profitez d’une saisie libre ou guidée et obtenez le prix instantanément."
