--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -27,9 +27,8 @@
 </section>
 
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
-  videoPath="assets/videos/test_video.mp4" title="Déposez votre formalité en 3 étapes"
-  firstStepTitle="Identifiez la structure concernée"
+<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/formalite.mp4"
+  title="Déposez votre formalité en 3 étapes" firstStepTitle="Identifiez la structure concernée"
   firstStepDescription="Saisissez les informations de la structure à créer ou le SIRET de l’entité existante."
   secondStepTitle="Sélectionnez vore formalité  "
   secondStepDescription="Choisissez les évènements ou mises à jour à formaliser."
