--- a/src/main/resources/mails/templates/send-gifted-post.html
+++ b/src/main/resources/mails/templates/send-gifted-post.html
@@ -173,8 +173,8 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Bonjour,</p>
-                                                                <p><span th:text="${responsable.firstName}"> </span>
-                                                                    <span th:text="${responsable.lastName}"></span> vous
+                                                                <p><span th:text="${responsable.firstname}"> </span>
+                                                                    <span th:text="${responsable.lastname}"></span> vous
                                                                     offre un article payant du JSS. Vous pouvez le
                                                                     consulter gratuitement,
                                                                     simplement en cliquant sur
