--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -244,7 +244,7 @@
               <img class="rounded-circle" src="assets/img/testimonial/Photo_IK.jpg" width="48" alt="testimonial">
               <div class="row ps-3 pt-3">
                 <h6 class=" mb-0">Isabelle de Kerviler</h6>
-                <p>Expert-Comptable</p>
+                <p>Expert-comptable</p>
               </div>
             </div>
             <p class="mb-0">Je tiens à souligner la réactivité et le professionnalisme du JSS pour les réponses
