--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
@@ -273,92 +273,22 @@
 
         <div class="col-lg-8">
           <h2 class="mb-5">Mentions légales</h2>
-          <h3>1. Editeur et hébergeur</h3>
+          <p>Dernière mise à jour : 01/08/2025</p>
           <p>
-            SOCIETE DE PUBLICATIONS ET DE PUBLICITE POUR LES SOCIETES - SPPS
-            SAS au capital de 216 000 €   552 074 627 RCS PARIS
-            8 rue Saint Augustin 75002 PARIS
-            Tél : 01 47 03 10 10
-
-            qui est détenue par
-            FINANCIERE DU MESNIL
-            8 rue Saint Augustin 75002 PARIS
-            RCS Paris B 402 283 212 Siret 40228321200023
-
-            La Directrice de la publication est Myriam de Montis.
-            Le Directeur de la rédaction est Cyrille de Montis.
-            La Secrétaire Générale de la rédaction est Cécile Leseur.
-
-            Ce site est reconnu en tant que service de presse en ligne dans la catégorie « Presse professionnelle » .
-            Son numéro de CPPAP est le 1124 X 93537.
-
-            N° ISSN : 3039-9742
-
-            Le contenu de ce site est protégé par le Code de la propriété intellectuelle et la convention de Berne.
-            Toute reproduction, autre que pour l'usage privé du visiteur du site, en vue notamment d'une diffusion
-            publique par n'importe quel moyen, est strictement interdite sans l'autorisation écrite du webmaster de ce
-            site.
+            Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l'économie
+            numérique, il est précisé aux utilisateurs du site https://www.jss.fr et https://www.my.jss.fr , ci-après
+            les « Sites », les présentes mentions légales.<br />
+            La connexion et la navigation sur les Sites des utilisateurs implique l’acceptation des présentes légales.
           </p>
-
-          <h3>2. License d'usage privé</h3>
-          <p>En se connectant au site jss.fr, et de ce seul fait, l'utilisateur reconnaît accepter de SPPS, éditrice du
-            site, une licence dont il s'engage à respecter les termes énoncés ci-après : L'utilisateur du site s'engage
-            à respecter les règles du Code de la propriété intellectuelle de tous les contenus proposés sur le site,
-            c'est-à-dire à ne pas reproduire, résumer, modifier, altérer ou rediffuser, sans autorisation expresse
-            préalable de l'éditeur, quelques parties du site (par exemple mais non exclusivement textes, illustrations,
-            logos, marques, icônes, applications ou logiciels), pour un usage autre que strictement privé, excluant
-            toute reproduction, rediffusion ou mise en réseau, sous quelque forme que ce soit, à des fins
-            professionnelles ou de diffusion en nombre. Ce droit d'usage privé sur les contenus du site est personnel et
-            non transmissible. Il est bien entendu que l'abonné, l'acheteur et l'utilisateur d'une publication, d'un
-            article ou d’une annonce sur support papier ou numérique, n'acquièrent qu'un droit d'usage de cette
-            publication, de cette annonce ou de cet article. Toute autre utilisation, par conséquent non autorisée,
-            constitue une contrefaçon sanctionnée pénalement.
-          </p>
-          <br>
-          <h3>3. Déclaration auprès de la CNIL</h3>
-          <p>Le site a fait l'objet d'une déclaration des traitements de données personnelles mis en œuvre dans le cadre
-            d'un site Internet auprès de la Commission Nationale de l'Informatique et des Libertés, en application des
-            articles 15 et 16 de la loi 78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés
-            et de la délibération n°2005-112 du 7 juin 2005, portant création d’une norme simplifiée concernant les
-            traitements automatisés de données à caractère personnel relatifs à la gestion des fichiers de clients et de
-            prospects et portant abrogation des normes simplifiées 11, 17 et 25.
-          </p>
-          <h3>4. Droit d'accès et de rectification</h3>
-          <p>MyJSS ne saurait être tenu responsable en cas d'indisponibilité temporaire des services, ni des
-            conséquences liées à l'utilisation des informations fournies par la plateforme.
-          </p>
-          <h3>5. Confidentialité des données</h3>
-          <p>Les informations liées aux achats effectués sur le site ainsi que toutes les informations personnelles que
-            vous saisissez sur le site sont traitées en toute confidentialité et nous nous engageons à ne pas les
-            transmettre ou les céder à des tiers.
-          </p>
-          <h3>6. Liens</h3>
-          <p>Les informations liées aux achats effectués sur le site ainsi que toutes les informations personnelles que
-            vous saisissez sur le site sont traitées en toute confidentialité et nous nous engageons à ne pas les
-            transmettre ou les céder à des tiers.
-          </p>
-          <h3>7. Votre responsabilité d'utilisateur</h3>
-          <p>L’utilisateur reconnaît qu’il a vérifié que le site ne pouvait lui transmettre aucun virus. SPPS n’est pas
-            responsable de la présence de virus sur le site. SPPS n’est pas non plus responsable de l’absence ou de
-            l’inexactitude de certaines informations.L’utilisateur reconnaît qu’il utilise sous sa seule responsabilité
-            les informations et renseignements diffusés sur le site. SPPS ne garantit pas l’exactitude de ces
-            informations et renseignements, qui sont donnés à titre purement indicatif.Le site est disponible 24 h /
-            24, sauf en cas de difficultés techniques internes ou externes et en cas de force majeure. Son
-            fonctionnement pourra être interrompu pour les besoins de la maintenance.
-          </p>
-          <h3>8. Inscription</h3>
-          <p>L’accès à votre compte peut s’effectuer par saisie de votre identifiant et mot de passe associé, dont vous
-            assurez seul la confidentialité.
-            L’utilisation du site suivant votre inscription est valable pour une durée indéterminée. Nous nous réservons
-            la possibilité d’y mettre fin à tout moment, par courrier électronique. En cas de non respect des
-            obligations inhérentes à votre responsabilité ci-avant, l’accès à votre espace personnel peut être,
-            immédiatement et sans préavis, temporairement ou définitivement suspendu au moyen de la désactivation de
-            votre compte et ce, sans préjudice de nos autres droits.
-          </p>
-          <h3>9. Paiment</h3>
-          <p>Le paiement en ligne s'effectue via Central
-            pay <a class="text-gray" href="https://customer.centralpay.net/home/687a7202-d59d-499e-b8db-5068a9ef8033">
-              https://customer.centralpay.net/home/687a7202-d59d-499e-b8db-5068a9ef8033</a>
+          <p class="border p-3">
+            SOCIETE DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES, société par actions simplifié, au capital social de
+            216.000€, immatriculée au RCS de Paris sous le numéro R.C.S. 552 074 627 et dont le siège social est situé
+            au 10 boulevard Haussmann 75009 PARIS, ayant pour numéro de TVA communautaire : FR12552074627
+            Vous pouvez nous joindre par téléphone au 01 47 03 10 10 ou par courriel électronique à l’adresse email :
+            contact&#64;jss.fr<br /><br />
+            Le directeur de publication du Site est : Madame Myriam DE MONTIS
+            Ce site est hébergé par la SOCIETE DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES. Elle est joignable, en sa
+            qualité d’hébergeur, aux mêmes coordonnées que visées ci-dessus.
           </p>
         </div>
       </div>
