--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -26,8 +26,8 @@
 </section>
 
 
-<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
-  videoPath="assets/videos/test_video.mp4" title="Récupérez les documents nécessaires à vos transactions ou formalités"
+<explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/doc.mp4"
+  title="Récupérez les documents nécessaires à vos transactions ou formalités"
   firstStepTitle="Choisissez les documents dont vous avez besoin"
   firstStepDescription="Nous vous fournissons tous types de documents disponibles auprès des autorités compétentes : Kbis, registres, Actes, CNO, Etats complets, RBE."
   secondStepTitle="Validez votre commande"
