--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -3,8 +3,8 @@
     <div class="container">
       <div class="navbar-brand-wrapper py-1 d-flex justify-content-between align-items-center">
         <a class="btn btn-secondary btn-fixed-secondary px-3 align-items-center d-flex" (click)="openMyJss()"
-          [href]="frontendMyJssUrl+MY_JSS_HOME_ROUTE"><img src="assets/images/homepage/my-jss-logo-link.svg" /><i
-            class="bi-arrow-up-right ms-1"></i></a>
+          target="_blank" [href]="frontendMyJssUrl+MY_JSS_HOME_ROUTE"><img
+            src="assets/images/homepage/my-jss-logo-link.svg" /><i class="bi-arrow-up-right ms-1"></i></a>
         <a class="navbar-brand ms-5 ps-3 " [routerLink]="['/']">
           <img class="lazyload" src="assets/images/homepage/logo.svg" style="max-height: 90px;" alt="image">
         </a>
