--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -59,7 +59,7 @@
         <label class=" dropdown-item">
           <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="withMissingAttachment"
             (change)="changeFilter()">
-          Qui requière mon attention
+          Qui requiert mon attention
         </label>
       </div>
     </div>
