--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -38,7 +38,7 @@
         *ngIf="statistics.customerOrderRequieringAttention && statistics.customerOrderRequieringAttention>0">
         <div class="h-100 bg-secondary rounded-3 text-center p-4 stat-card"
           [routerLink]="'/account/orders/search/'+CUSTOMER_ORDER_STATUS_REQUIRE_ATTENTION">
-          <h2 class="h6 pb-2 mb-1">Commandes qui requièrent votre attention</h2>
+          <h2 class="h6 pb-2 mb-1">Commandes qui requierent votre attention</h2>
           <div class="h2 text-primary mb-2">{{statistics.customerOrderRequieringAttention}}</div>
         </div>
       </div>
