--- a/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotations/quotations.component.html
@@ -36,7 +36,7 @@
         <label class=" dropdown-item">
           <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="statusFilterWaitingConfrere"
             (change)="changeFilter()">
-          En cours d'un confrère
+          En attente d'un confrère
         </label>
         <label class=" dropdown-item">
           <input class="form-check-input me-2" type="checkbox" value="" [(ngModel)]="statusFilterSendToCustomer"
