--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -78,7 +78,7 @@
                   <ng-container *ngFor="let service of selectedServiceFamily.services ; let indexService  =index">
                     <div class="form-check service-item m-1"
                       *ngIf="service.customLabel.toLocaleLowerCase().indexOf(searchtext.toLocaleLowerCase())>=0 && selectedAssoIndex!=null
-              && (quotation && selectedAssoIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret || service.isRequiringNewUnregisteredAffaire)">
+              && (quotation && selectedAssoIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret && !service.isRequiringNewUnregisteredAffaire || quotation && selectedAssoIndex!=null && !quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret && service.isRequiringNewUnregisteredAffaire)">
                       <input class="form-check-input" type="checkbox" [id]="'ex-check-'+indexService"
                         (click)="removeServiceFromCurrentAffaire(service)"
                         *ngIf="getServiceIndexInCurrentAffaire(service)>=0" checked>
