--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -30,7 +30,7 @@
 <explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg" videoPath="assets/videos/formalite.mp4"
   title="Déposez votre formalité en 3 étapes" firstStepTitle="Identifiez la structure concernée"
   firstStepDescription="Saisissez les informations de la structure à créer ou le SIRET de l’entité existante."
-  secondStepTitle="Sélectionnez vore formalité  "
+  secondStepTitle="Sélectionnez votre formalité  "
   secondStepDescription="Choisissez les évènements ou mises à jour à formaliser."
   thirdStepTitle="Remplissez le bon de commande et téléversez les pièces justificatives"
   thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."></explaination-video>
