ended CGU etc. + bug homepage with logo position

--- a/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
+++ b/client-myjss/src/app/modules/general/components/homepage/homepage.component.html
@@ -21,7 +21,7 @@
           [isLightButtons]="true">
         </double-buttons>
       </div>
-      <div class="col-auto h-100 d-none d-lg-block ">
+      <div class="col-auto h-100 d-none d-xl-block ">
         <a href="">
           <img ui-sref='' [src]="logoJss" class="img-fluid" />
         </a>
