--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.css
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.css
@@ -4,3 +4,20 @@ aside ul li {
   padding-bottom: 10px;
   padding-top: 10px;
 }
+
+.serie-border {
+  border-left: solid 4px var(--ar-primary);
+  background-color: var(--ar-secondary-bg-subtle);
+  color: var(--ar-gray-100);
+}
+
+th,
+td {
+  border: 1px solid rgb(160 160 160);
+  padding: 8px 10px;
+}
+
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(140 140 140);
+}
