fix tag size + nb of article in Fil info

--- a/client-jss/src/app/main/components/category-hub/category-hub.component.html
+++ b/client-jss/src/app/main/components/category-hub/category-hub.component.html
@@ -118,7 +118,7 @@
                   </div>
                   <ul class="tag-cloud list-inline">
                     <li *ngFor="let tag of tagsByEntityType.slice(0,8)" class="list-inline-item pb-1"><a class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary
-                        text-hover-white" [routerLink]=' "/post/tag/" + tag.slug'>{{tag.name}}</a>
+                        text-hover-white fs-8" [routerLink]=' "/post/tag/" + tag.slug'>{{tag.name}}</a>
                     </li>
                   </ul>
                 </div>
