--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -96,7 +96,7 @@
                   </a>
                 </div>
               </div>
-              <div *ngFor="let post of lastPosts | slice:3:10">
+              <div *ngFor="let post of lastPosts | slice:3">
                 <article data-aos="fade-up" class="blog-style2 card my-3">
                   <div class="feature-image order-0 rounded-2">
                     <div class="image-frame image-hover-style-1">
@@ -307,7 +307,7 @@
 
               <ul class="tag-cloud list-inline">
                 <li *ngFor="let tag of tagTendencies.slice(0,10)" class="list-inline-item pb-1"><a
-                    class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary text-hover-white"
+                    class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary fs-8"
                     [routerLink]="'/post/tag/'+tag.slug">{{tag.name}}</a>
                 </li>
               </ul>
