--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -172,11 +172,12 @@
                   <h2 class="fw-bold">Vous souhaitez lire la suite ?</h2>
                   <p>Lisez cette article pour seulement 1 € ou abonnez-vous pour profiter de cet article en
                     intégralité et de bien d'autres !</p>
-                  <div><a class="btn btn-secondary mt-3" style="margin-right: 20px;cursor: pointer;"
+                  <div class="row gap-2 justify-content-center">
+                    <a class="col-auto btn btn-secondary mt-3" style="cursor: pointer;"
                       [href]='frontendMyJssUrl+"/quotation/subscription/" + ONE_POST_SUBSCRIPTION + "/" + false + "/" + post.id'
                       target="_blank">Lire
                       pour 1 €</a>
-                    <a class="btn btn-yellow mt-3" style="cursor: pointer;" href="subscription">S'abonner</a>
+                    <a class="col-auto btn btn-yellow mt-3" style="cursor: pointer;" href="subscription">S'abonner</a>
                   </div>
                 </div>
 
