--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -21,17 +21,17 @@
   </div>
 </section>
 
-<section class="container mt-3 mb-5 pb-5">
+<section class="container my-5">
   <div class="row g-4 justify-content-between">
-    <div class=" col-md-4 text-start">
+    <div class=" col text-start">
       <div class=" h2 mb-1 text-white">1898</div>
       <div class="fs-sm text-body">Année de création</div>
     </div>
-    <div class="col-md-4 text-center">
+    <div class="col text-center">
       <div class="h2 mb-1 text-white">50</div>
       <div class="fs-sm text-body">Collaborateurs</div>
     </div>
-    <div class="col-md-4 text-end">
+    <div class="col text-end">
       <div class="h2 mb-1 text-white">1200</div>
       <div class="fs-sm text-body">Articles/an</div>
     </div>
